# httpx2

./: README.md  mkdocs.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: main.yml
docs/: compatibility.md  contributing.md  environment_variables.md  index.md  quickstart.md  third_party_packages.md
docs/advanced/: clients.md  proxies.md
scripts/: benchmark  check  lint  unasync.py
src/httpcore/: pyproject.toml
src/httpcore/httpcore/: _models.py  _utils.py
src/httpcore/httpcore/_async/: connection_pool.py  http11.py  http2.py  interfaces.py
src/httpcore/httpcore/_sync/: connection_pool.py  http11.py  http2.py  interfaces.py
src/httpcore/scripts/: unasync.py
src/httpcore2/: CHANGELOG.md  pyproject.toml
src/httpcore2/docs/: proxies.md
src/httpcore2/httpcore2/: __init__.py  _models.py  _synchronization.py  _utils.py
src/httpcore2/httpcore2/_async/: connection_pool.py  http11.py  http2.py  http_proxy.py  interfaces.py  socks_proxy.py
src/httpcore2/httpcore2/_backends/: sync.py
src/httpcore2/httpcore2/_sync/: connection_pool.py  http11.py  http2.py  http_proxy.py  interfaces.py  socks_proxy.py
src/httpcore2/scripts/: unasync.py
src/httpx2/: CHANGELOG.md  pyproject.toml
src/httpx2/httpx2/: __init__.py  _api.py  _auth.py  _cli.py  _client.py  _config.py  _content.py  _decoders.py  _exceptions.py  _main.py  _models.py  _multipart.py  _urlparse.py  _urls.py  _utils.py
src/httpx2/httpx2/_transports/: asgi.py  base.py  default.py  wsgi.py
tests/: test_benchmark.py
tests/httpcore2/: concurrency.py  test_cancellations.py  test_models.py  test_write_performance.py
tests/httpcore2/_async/: test_connection.py  test_connection_pool.py  test_http11.py  test_http2.py  test_http_proxy.py  test_socks_proxy.py
tests/httpcore2/_sync/: test_connection.py  test_connection_pool.py  test_http11.py  test_http2.py  test_http_proxy.py  test_socks_proxy.py
tests/httpcore2/benchmark/: client.py
tests/httpx2/: conftest.py  test_asgi.py  test_auth.py  test_config.py  test_content.py  test_decoders.py  test_exceptions.py  test_exported_members.py  test_main.py  test_multipart.py  test_timeouts.py  test_utils.py  test_wsgi.py
tests/httpx2/client/: test_async_client.py  test_auth.py  test_client.py  test_cookies.py  test_event_hooks.py  test_headers.py  test_queryparams.py  test_redirects.py
tests/httpx2/models/: test_cookies.py  test_headers.py  test_queryparams.py  test_requests.py  test_responses.py  test_url.py  test_whatwg.py
