[build-system]
requires = [
    "hatchling",
    "hatch-fancy-pypi-readme",
    "uv-dynamic-versioning>=0.7.0",
]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "httpcore2"
dynamic = ["readme", "version"]
description = "A minimal low-level HTTP client."
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [{ name = "Tom Christie", email = "tom@tomchristie.com" }]
maintainers = [
    { name = "Pydantic Services Inc.", email = "engineering@pydantic.dev" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Trio",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = ["certifi", "h11>=0.16"]

[project.optional-dependencies]
http2 = ["h2>=3,<5"]
socks = ["socksio==1.*"]
trio = ["trio>=0.22.0,<1.0"]
asyncio = ["anyio>=4.5.0,<5.0"]

[project.urls]
Documentation = "https://www.encode.io/httpcore"
Homepage = "https://www.encode.io/httpcore/"
Source = "https://github.com/encode/httpcore"

[tool.hatch.build.targets.sdist]
include = ["/httpcore2", "/CHANGELOG.md", "/LICENSE.md", "/README.md", "/tests"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "CHANGELOG.md"
